force-app/main/default/objects/Volunteer_Hours__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Contact__c,  Full_Name__c ,&quot;_blank&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>Volunteer_Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Due_Diligence_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Scoring_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engagement Scoring Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Scoring_Date__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &quot;Completed&quot;), 
DATE( YEAR( Volunteer_Job__r.End_Date__c ) + FLOOR( ( MONTH ( Volunteer_Job__r.End_Date__c ) + 12 - 1 ) / 12 ), MOD( MONTH ( Volunteer_Job__r.End_Date__c) + 12 - 1 + IF( DAY ( Volunteer_Job__r.End_Date__c) &gt; CASE( MOD( MONTH( Volunteer_Job__r.End_Date__c) + 12 - 1, 12 ) + 1, 2, 28, 4, 30, 6, 30, 9, 30, 11, 30, 31 ), 1, 0 ), 12 ) + 1, 
IF( DAY( Volunteer_Job__r.End_Date__c) &gt; CASE( MOD( MONTH( Volunteer_Job__r.End_Date__c) + 12 - 1, 12 ) + 1, 2, 28, 4, 30, 6, 30, 9, 30, 11, 30, 31 ), 1, DAY( Volunteer_Job__r.End_Date__c) ) ),
DATE( YEAR( Volunteer_Job__r.Start_Date__c ) + FLOOR( ( MONTH ( Volunteer_Job__r.Start_Date__c ) + 12 - 1 ) / 12 ), MOD( MONTH ( Volunteer_Job__r.Start_Date__c ) + 12 - 1 + IF( DAY ( Volunteer_Job__r.Start_Date__c ) &gt; CASE( MOD( MONTH( Volunteer_Job__r.Start_Date__c ) + 12 - 1, 12 ) + 1, 2, 28, 4, 30, 6, 30, 9, 30, 11, 30, 31 ), 1, 0 ), 12 ) + 1, 
IF( DAY( Volunteer_Job__r.Start_Date__c ) &gt; CASE( MOD( MONTH( Volunteer_Job__r.Start_Date__c ) + 12 - 1, 12 ) + 1, 2, 28, 4, 30, 6, 30, 9, 30, 11, 30, 31 ), 1, DAY( Volunteer_Job__r.Start_Date__c ) ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement Scoring Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteers__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Defaults to 1. Increase if this person is bringing additional people whom you are not directly tracking as contacts, and won&apos;t be logging individual volunteer hours against.</inlineHelpText>
        <label>Number of Volunteers</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date_Time__c</fullName>
        <inlineHelpText>The actual date &amp; time the volunteer is planning on starting.</inlineHelpText>
        <label>Planned Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reference_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shift_Start_Date_Time__c</fullName>
        <formula>Volunteer_Shift__r.Start_Date_Time__c</formula>
        <label>Shift Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Web Sign Up</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>No-Show</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Note__c</fullName>
        <inlineHelpText>Text information from the system scheduler.</inlineHelpText>
        <label>System Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Worked__c</fullName>
        <formula>IF( ISPICKVAL(Status__c, &quot;Completed&quot;), Hours_Worked__c *  Number_of_Volunteers__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Volunteer_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Campaign_Name__c</fullName>
        <formula>Volunteer_Job__r.Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Campaign__c</fullName>
        <formula>Volunteer_Job__r.Campaign__c</formula>
        <label>Volunteer Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Job__c</fullName>
        <label>Volunteer Job</label>
        <referenceTo>Volunteer_Job__c</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>Volunteer_Hours</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Volunteer_Recurrence_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volunteer Recurrence Schedule</label>
        <referenceTo>Volunteer_Recurrence_Schedule__c</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>Volunteer_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Shift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volunteer Shift</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Volunteer_Shift__c.Volunteer_Job__c</field>
                <operation>equals</operation>
                <valueField>$Source.Volunteer_Job__c</valueField>
            </filterItems>
            <infoMessage>You can only pick a Shift which belongs to the current Job.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Volunteer_Shift__c</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>Volunteer_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Working_with_Children_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Working with Children Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Volunteer Hours</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Volunteer_Job__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Engagement_Scoring_Applied__c</columns>
        <columns>Engagement_Scoring_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Campaign_Name__c</field>
            <operation>equals</operation>
            <value>Monash Indonesia Market Research</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Volunteer_Low_Touch</fullName>
        <columns>NAME</columns>
        <columns>Volunteer_Job__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Engagement_Scoring_Applied__c</columns>
        <columns>Engagement_Scoring_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Campaign_Name__c</field>
            <operation>equals</operation>
            <value>Monash Indonesia Market Research</value>
        </filters>
        <label>Volunteer Low Touch</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>HoursID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>StatusMustBeSet</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c,&quot;&quot; )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please specify a Status value.</errorMessage>
    </validationRules>
</CustomObject>